[package]

name = "isosurface-extraction"
version = "0.0.0"
authors = [
  "Zeke Foppa <benjamin.foppa@gmail.com>",
]

[lib]
name = "isosurface_extraction"
path = "./src/mod.rs"

[dependencies]
clippy = "*"
log = "*"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.voxel-data]
git = "https://github.com/bfops/rust-voxel-data"
